--- a/.web/package.json
+++ b/.web/package.json
@@ -20,7 +20,9 @@
     "next-themes": "0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-loading-icons": "^1.1.0",
+    "react-player": "^2.12.0",
     "socket.io-client": "4.6.1",
     "tailwindcss": "^3.3.2",
     "universal-cookie": "4.0.4"
